# opengl_tutorial

./: .gitignore  CMakeLists.txt  README.md  build.sh  makefile
include/: cube.hpp  lights.hpp  mesh.hpp  model.hpp  point_light.hpp  quad.hpp  room.hpp  shader.hpp  shapes.hpp
src/: hello_triangle.cpp  hello_triangle2.cpp  hello_window.cpp
src/2_lighting/4_lighting_maps/2_specular/: main.cpp
src/2_lighting/6_multiple_lights/: main.cpp
src/3_model_loading/: backpack.fs  backpack.vs  floor.fs  main.cpp  model.fs  room.fs
src/4_advanced_opengl/11_anti_aliasing/: main.cpp  main.fs
src/5_advanced_lighting/3_shadows/1_shadow_mapping/: main.cpp  main.fs
src/camera/1/: camera1.cpp
src/camera/2/: camera2.cpp
src/coordinate_systems/1/: coordinate_systems.cpp
src/coordinate_systems/2/: coordinate_systems.cpp  coordinate_systems2.cpp
src/coordinate_systems/3/: coordinate_systems3.cpp
src/getting_started/camera/1/: camera1.cpp
src/getting_started/camera/2/: camera2.cpp
src/getting_started/coordinate_systems/1/: coordinate_systems1.cpp
src/getting_started/coordinate_systems/2/: coordinate_systems2.cpp
src/getting_started/coordinate_systems/3/: coordinate_systems3.cpp
src/getting_started/shaders/3/: shaders3.cpp
src/getting_started/textures/1/: textures1.cpp
src/getting_started/textures/2/: textures2.cpp
src/getting_started/transformations/: transformations.cpp
src/lighting/1_colors/: main.cpp
src/lighting/2_basic_lighting/1_ambient/: main.cpp
src/lighting/2_basic_lighting/2_diffuse/: main.cpp
src/lighting/2_basic_lighting/3_specular/: main.cpp
src/lighting/3_materials/1_setting_materials/: main.cpp
src/lighting/3_materials/2_adjusting_light/: main.cpp
src/lighting/3_materials/3_changing_color/: main.cpp
src/lighting/4_lighting_maps/1_diffuse/: main.cpp
src/lighting/4_lighting_maps/2_specular/: main.cpp
src/lighting/5_light_casters/1_directional/: main.cpp
src/lighting/5_light_casters/2_point/: main.cpp
src/lighting/5_light_casters/3_spotlight/: main.cpp
src/lighting/6_multiple_lights/: main.cpp
src/lighting/basic_lighting/ambient/: basic_lighting_ambient.cpp
src/lighting/basic_lighting/diffuse/: basic_lighting_diffuse.cpp
src/lighting/basic_lighting/specular/: basic_lighting_specular.cpp
src/lighting/colors/: colors.cpp
src/lighting/colors/1/: colors1.cpp
src/lighting/light_casters/1_directional/: main.cpp
src/lighting/light_casters/2_point/: main.cpp
src/lighting/lighting_maps/diffuse/: main.cpp
src/lighting/lighting_maps/specular/: main.cpp
src/lighting/materials/adjusting_light/: adjusting_light.cpp
src/lighting/materials/changing_color/: changing_color.cpp
src/lighting/materials/setting_materials/: setting_materials.cpp
src/shaders/3/: shaders3.cpp
src/shaders3/: shaders3.cpp
src/textures/1/: textures1.cpp
src/textures/2/: shader.fs  textures2.cpp
src/textures1/: textures1.cpp
src/transformations/: transformations.cpp
